# transit-tracker

./: .dockerignore  .env.development.example  .env.example  .eslintignore  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  Makefile  README.md  coderabbit.yaml  docker-compose.dev.yml  docker-compose.development.yaml  docker-compose.yml  nginx.conf  nginx.dev.conf  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS
backend/: .dockerignore  .env  .eslintrc.json  AGENTS.md  Dockerfile  Dockerfile.worker  README.md  nest-cli.worker.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/docs/: architecture.md  overview.md
backend/mbta-server/: manage.py  mbta_types.py
backend/mbta-server/alerts/: const.py  health_state.py  logging_utils.py  mbta_event_streamer.py  mbta_message_codec.py  payload_transform.py  redis_client.py  urls.py  views.py
backend/mbta-server/mbta/: asgi.py  settings.py  urls.py  wsgi.py
backend/mbta-server/streaming/: __init__.py  broker.py  codec.py  health.py  logging.py  sse.py  worker.py
backend/mbta-server/tracking/: const.py  errors.py  mbta_predictions_client.py  payload_transform.py  prediction_cache.py  redis_client.py  static_dataset.py  station_index.py  urls.py  views.py
backend/src/: app.module.ts  main.ts  worker.module.ts  worker.ts
backend/src/common/: constants.ts
backend/src/config/: configuration.ts
backend/static/: rapid_transit_routes.json  rapid_transit_stops.json
backend/tests/: jest-contract.json  jest-integration.json
(+229 files in other folders)
